  * Disable SSLv2 by default. It is insecure. Also only enable ciphers with
    key lengths of at least 128 bit.
  * Always pass -g to gcc instead of relying on dpkg-buildpackage to set
    CFLAGS. We always want the debug info for the apache2-dbg package.

  [ Ryan Niebur ]
  * Upgraded to policy 3.8.0
    - added support for noopt in DEB_BUILD_OPTIONS
    - added a README.source
  * Dropped XS- from the Vcs fields in control

 -- Ryan Niebur <RyanRyan52@gmail.com>  Thu, 26 Jun 2008 17:54:36 -0700

apache2 (2.2.9-2) unstable; urgency=low

  * Make the init script use normal 'stop' instead of 'graceful-stop' again:
    With graceful-stop, it can take a long time until all child processes have
    closed their listening sockets and there is no way for the init script to
    know when it is save to start apache again. This could make the restart of
    apache fail. (Closes: #486629, #463338)
  * Improve package descriptions, thanks to Justin B Rye. (Closes: #486855)

 -- Stefan Fritsch <sf@debian.org>  Sat, 21 Jun 2008 12:22:17 +0200

apache2 (2.2.9-1) unstable; urgency=low

  * New upstream release. Notable changes:
    - mod_proxy_http: Better handling of excessive interim responses from
      origin server to prevent potential denial of service and high memory
      usage (CVE-2008-2364).
    - mod_proxy_balancer: Prevent CSRF attacks against the balancer-manager
      (CVE-2007-6420).
    - Worker / Event MPM: Fix race condition in pool recycling that leads to
      segmentation faults under load. (Closes: #484800)
    - mod_proxy: Keep connections to the backend persistent in the HTTPS case.
    - mod_proxy: Support environment variable interpolation in reverse
      proxying directives.
    - mod_headers: Add 'merge' option to avoid duplicate values within the
      same header.
    - mod_substitute: The default is now flattening the buckets after each
      substitution. The newly added 'q' flag allows for the quicker, more
      efficient bucket-splitting.